fix: task name text overflow ellipsis

--- a/src/renderer/components/Theme/Variables.scss
+++ b/src/renderer/components/Theme/Variables.scss
@@ -748,7 +748,7 @@ $--subnav-active-text-color: $--color-primary !default;
 -------------------------- */
 $--panel-background: $--color-white !default;
 $--panel-title-color: $--color-text-primary !default;
-$--panel-border-color: #EBECF0 !default;
+$--panel-border-color: rgba(0, 0, 0, 0.1) !default;
 
 /* Task
 -------------------------- */
